2000-11-22  Jesper Skov  <jskov@redhat.com>

	* src/sh.ld: Added mangling to all symbols.
	* src/vectors.S: Same. Plus introduce macro to simplify (a bit)
	the definition of inline immediate constants.

	* include/sh_regs.h: Include HAL config.

	* include/hal_arch.h: Don't prefix with _ in HAL_BREAKPOINT.
	* src/sh_stub.c: Matching changes - hack to handle both
	conventions.

	* include/basetype.h: Made CYG_LABEL_DEFN depend on toolchain.

	* include/arch.inc: Added symbol ref/def macros.
	* src/context.S: Removed FUNC_START macro.

2000-11-09  Jesper Skov  <jskov@redhat.com>

	* src/sh_stub.c (__single_step): Fix CPP problem.

2000-10-31  Jesper Skov  <jskov@redhat.com>


	* include/mod_7707a.h: Moved to SH3 HAL.
	* include/mod_7708.h: Same.
	* include/mod_7709a.h: Same.
	* include/mod_7729.h: Same.
	* include/sh3_sci.h: Same.
	* include/sh3_scif.h: Same.
	* src/sh3_sci.c: Same.
	* src/sh3_scif.c: Same.

	* include/hal_cache.h: Moved SH3 code out to new SH3 HAL.
	* cdl/hal_sh.cdl: Same.
	* include/hal_intr.h: Same.
	* include/sh_regs.h: Same.
	* src/hal_misc.c: Same.
	* src/hal_mk_defs.c: Same.

	* src/vectors.S: Changed to support SH4. Moved CPU post-reset init
	code to variant HALs. Moved interrupt decoding to variant HAL
	macros. Moved cache code to variant HALs.

2000-10-24  Jesper Skov  <jskov@redhat.com>

	* src/vectors.S (hal_hw_init): Added errata comment.

2000-10-23  Jesper Skov  <jskov@redhat.com>

	* src/hal_misc.c: Always include hal_intr.h

	* src/sh3_sci.c: Use specified value for default baud rate.
	* src/sh3_scif.c: Same.

2000-10-20  Jesper Skov  <jskov@redhat.com>

	* src/hal_misc.c: Update __mem_fault_handler declaration.

2000-10-19  Jesper Skov  <jskov@redhat.com>

	* include/sh_regs.h (CYGARC_REG_WCR1_0WS, CYGARC_REG_WCR2_0WS):
	Added for consistent init code.
	
2000-10-17  Jesper Skov  <jskov@redhat.com>

	* src/vectors.S (__reset_platform): Rearrange constants used in
	early init code.

2000-10-16  Jonathan Larmour  <jlarmour@redhat.com>
