@@ -58,10 +58,8 @@
 
 #ifdef linux
 # define CYG_LABEL_DEFN(_name_) _name_
-# define CYG_LABEL_NAME(_name_) _name_
 #else
 # define CYG_LABEL_DEFN(_name_) _##_name_
-# define CYG_LABEL_NAME(_name_) _##_name_
 #endif
 
 //-----------------------------------------------------------------------------
